src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use '@angular/material' as mat;
// Plus imports for other components in your app.
@use 'app/themes/dungeon-yellow.scss' as dungeon-yellow;

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();

// Define the theme object.
/*$dungeon-maestro-app-theme: mat.define-theme((
  color: (
    theme-type: dark,
    primary: mat.$orange-palette
  ),
  density: (
    scale: 0,
  )
));
*/

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
:root {
  @include mat.all-component-themes(dungeon-yellow.$dark-theme);
}

// Comment out the line below if you want to use the pre-defined typography utility classes.
// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
// @include mat.typography-hierarchy($dungeon-maestro-app-theme);

// Comment out the line below if you want to use the deprecated `color` inputs.
// @include mat.color-variants-backwards-compatibility($dungeon-maestro-app-theme);
/* You can add global styles to this file, and also import other style files */

html, body { height: 100%;}
body { 
  @extend .mat-app-background; margin: 0;
  background: #04040471 url('/assets/img/background-img-1.jpg');
  height:90vh;
}
h1, h2, h3, h4, h5, h6 {
  font-family: 'Matura MT Script Capitals'
}


.center-content {
  display: flex;
  justify-content: center;
  align-content: center;
  margin: 2px;
}

.centered-card {
  display: flex;
  justify-self: center;
  justify-content: center;
  align-self: center;
  align-content: center;
  max-width: 350px;
  margin: 8px auto;
}

.input-box {
  display: flex;
  justify-self: center;
  align-self: center;
  max-width: fit-content;
  margin: auto;
}

